Main branch list

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
     </main>
 
   <div class="footer">
+
+    Created by Me.
     <ul class="footer-list">
       <li class="footer-item"> <svg width="24" height="24" class="">
         <path d="M12 2.09961L1 12H4V21H11V15H13V21H20V12H23L12 2.09961ZM12 4.79102L18 10.1914V11V19H15V13H9V19H6V10.1914L12 4.79102Z"/>
